# RadRay

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  PLAN.md  README.md  fetch_sdks.ps1  fetch_third_party.ps1  format_all.ps1  maybe_plan.md  package-lock.json  plan-thread-control.md  plan.md  project_manifest.json  sdk_manifest.json  win_gen_compile_commands.ps1  xmake.lua
examples/hello_bindless/: CMakeLists.txt  bindless.hlsl  hello_bindless.cpp
examples/hello_imgui/: CMakeLists.txt  hello_imgui.cpp
examples/hello_mandelbrot/: CMakeLists.txt  blit.hlsl  hello_mandelbrot.cpp
examples/hello_pbr/: CMakeLists.txt  hello_pbr.cpp  pbr.hlsl
examples/hello_world_d3d12/: CMakeLists.txt  hello_world_d3d12.cpp
examples/hello_world_vk/: CMakeLists.txt  hello_world_vk.cpp
examples/hello_world_vk/shaders/: color.hlsl
modules/core/: CMakeLists.txt
modules/core/src/: allocator.cpp  basic_corotinue.cpp  binary_io.cpp  camera_control.cpp  dynamic_library.cpp  environment.cpp  errors.cpp  file.cpp  guid.cpp  hash.cpp  image_data.cpp  json.cpp  logger.cpp  memory.cpp  platform.cpp  stopwatch.cpp  structured_buffer.cpp  text_encoding.cpp  triangle_mesh.cpp  types.cpp  utility.cpp  vertex_data.cpp  wavefront_obj.cpp
modules/core/tests/: CMakeLists.txt  test_binary_io.cpp  test_buddy_alloc.cpp  test_enum_flags.cpp  test_first_fit_alloc.cpp  test_free_list_alloc.cpp  test_img_rw.cpp  test_json.cpp  test_json_serializer.cpp  test_nullable.cpp  test_pod_hash.cpp  test_runtime_type.cpp  test_sparse_set.cpp  test_str_convert.cpp  test_structured_buffer.cpp
modules/imgui/: CMakeLists.txt
modules/imgui/src/: dear_imgui.cpp  dear_imgui.cpp.backup  dear_imgui_shader_dxil.cpp  dear_imgui_shader_metallib.cpp  dear_imgui_shader_spirv.cpp  imgui_app.cpp
modules/render/: CLAUDE.md  CMakeLists.txt  Pragmatic_RenderGraph_Phase4_桥接后端的实现计划.md  Pragmatic_RenderGraph实现计划表.md  Pragmatic_RenderGraph架构设计.md  Pragmatic_RenderGraph阶段三实现计划.md  RenderGraph系统调研.md  ray_tracing_api_plan.md  ray_tracing_apis_overview.md  review渲染模块.md  重构rootsig.md  阶段二_宏观图拓扑与生命周期深度剖析.md
modules/render/runtime/: 实时渲染系统MVP架构设计.md
modules/render/src/: bind_bridge.cpp  common.cpp  d3d12shader.h  d3dcommon_adapter.h  dear_imgui.cpp  debug.cpp  dxc.cpp  gpu_resource.cpp  hlsl.cpp  msl.cpp  pipeline_state_cache.cpp  render_graph.cpp  render_graph_executor.cpp  render_utility.cpp  resource_binder.cpp  resource_binding_table.cpp  rhi.cpp  root_signature_helper.cpp  sampler_cache.cpp  shader_cbuffer_helper.cpp  shader_variant_cache.cpp  spirv.cpp  spvc.cpp  utility.cpp
modules/render/tests/: CMakeLists.txt  render_test_framework.cpp  render_test_framework.h  test_binding_layout_builder.cpp  test_compute_binding.cpp  test_d3d12_binding_layout_builder.cpp  test_reflection_serialize.cpp  test_rhi_commands.cpp  test_rhi_swapchain.cpp  test_spvc_msl.cpp  test_vulkan_binding_layout_builder.cpp
modules/runtime/: CMakeLists.txt  GpuRuntime运行时API头文件草案.md  GpuRuntime运行时API重设计.md  GpuRuntime运行时API问题.md  render-graph-implementation-design-v1.md  render-graph-public-api-v1.md  render-graph-report.md  render-graph-shader-binding-v1.md  最小实时渲染系统前置基础设施分析.md
modules/runtime/src/: application.cpp  asset_manager.cpp  frame_snapshot.cpp  gltf_asset.cpp  gltf_asset.cpp.backup  gpu_resource.cpp  gpu_system.cpp  image_asset.cpp  imgui_system.cpp  material.cpp  material_asset.cpp  material_instance.cpp  material_layout.cpp  material_parameter_layout.cpp  material_property.cpp  material_render_proxy.cpp  persistent_resource_registry.cpp  pipeline_cache.cpp  pipeline_state_cache.cpp  render_context.cpp  render_graph.cpp  render_graph_builder.cpp  render_graph_export_dot.cpp  render_pass_registry.cpp  render_prepare.cpp  render_system.cpp  renderer_runtime.cpp  runtime_support.cpp  sampler_cache.cpp  shader_artifact_resolver.cpp  shader_asset.cpp  shader_binding_plan.cpp  shader_binding_policy.cpp  shader_default_resource_library.cpp  shader_parameter_set.cpp  shader_parameters.cpp  shader_variant.cpp  shader_variant_library.cpp  static_mesh.cpp  texture_asset.cpp  (+3 more)
modules/runtime/tests/: CMakeLists.txt  check_runtime_coroutine_boundary.cmake  gpu_runtime_test_support.h  test_gpu_resource.cpp  (+51 more)
modules/shader/: CMakeLists.txt
modules/window/: CMakeLists.txt
tests/: CMakeLists.txt
tests/test_bind_bridge/: CMakeLists.txt  test_bind_bridge.cpp
tests/test_block_alloc/: CMakeLists.txt  test_block_alloc.cpp
tests/test_buddy_alloc/: CMakeLists.txt  test_buddy_alloc.cpp
tests/test_byte_to_dword/: CMakeLists.txt  test_byte_to_dword.cpp
tests/test_d3d12_descheap_alloc/: CMakeLists.txt  test_d3d12_descheap_alloc.cpp
tests/test_d3d12_ray_tracing_smoke/: CMakeLists.txt  test_d3d12_ray_tracing_smoke.cpp
tests/test_dxc/: CMakeLists.txt  test_dxc.cpp
tests/test_free_list_alloc/: CMakeLists.txt  test_free_list_alloc.cpp
tests/test_hello_world_d3d12_offscreen/: CMakeLists.txt  test_hello_world_d3d12_offscreen.cpp
tests/test_hello_world_rt/: CMakeLists.txt  test_hello_world_rt.cpp
tests/test_hello_world_triangle/: CMakeLists.txt  test_hello_world_triangle.cpp
tests/test_hlsl_to_msl_refl/: CMakeLists.txt  test_hlsl_to_msl_refl.cpp
tests/test_img_rw/: CMakeLists.txt  test_img_rw.cpp
tests/test_msl_refl/: CMakeLists.txt  test_msl_refl.mm
tests/test_native_window/: CMakeLists.txt  test_native_window.cpp
tests/test_ray_tracing_api/: CMakeLists.txt  test_ray_tracing_api.cpp
tests/test_render_graph/: CMakeLists.txt  test_render_graph.cpp
tests/test_render_graph_executor/: CMakeLists.txt  test_render_graph_executor.cpp
tests/test_shader_cbuffer/: CMakeLists.txt  test_shader_cbuffer.cpp
tests/test_spvc/: CMakeLists.txt  test_spvc.cpp
tests/test_spvc_to_msl/: CMakeLists.txt  test_spvc_to_msl.cpp
tests/test_str_convert/: CMakeLists.txt  test_str_convert.cpp
tests/test_structured_buffer/: CMakeLists.txt  test_structured_buffer.cpp
tests/test_wavefront_obj/: CMakeLists.txt  test_wavefront_obj.cpp
tools/shader_cooker/: CMakeLists.txt  main.cpp
(+795 files in other folders)
