add_executable(hello_imgui hello_imgui.cpp)
target_link_libraries(hello_imgui PRIVATE radraywindow radrayrender radrayimgui)
target_compile_options(hello_imgui PRIVATE $<$<BOOL:MSVC>:/W4>)
radray_compile_flag_auto_simd(hello_imgui)
radray_compile_flag_lto(hello_imgui)
radray_link_flag_lto(hello_imgui)
radray_set_build_path(hello_imgui)
