add_executable(hello_world_vk hello_world_vk.cpp)
target_link_libraries(hello_world_vk PRIVATE radraywindow radrayrender)
target_compile_options(hello_world_vk PRIVATE $<$<BOOL:MSVC>:/W4>)
radray_optimize_flags_binary(hello_world_vk)
radray_example_files(hello_world_vk ${CMAKE_CURRENT_SOURCE_DIR}/color.hlsl)
radray_set_build_path(hello_world_vk)
